--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 	<body>
 		<video
 			class="background-vid"
-			src="assets/Event Promo.mp4"
+			src="
+			https://github.com/getrefined/function/assets/72031997/467d0e0d-432d-40b2-b8c4-0a18cd495f05
+			
+			"
 			autoplay
 			muted
 			loop
