--- a/index.html
+++ b/index.html
@@ -4,15 +4,17 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Document</title>
+		<title>Function.</title>
 		<link rel="stylesheet" href="style.css" />
+		<link rel="icon" type="image/x-icon" href="/favicon.png" />
+		<!-- png favicon -->
+		<link rel="apple-touch-icon" href="/favicon.png" />
 	</head>
 	<body>
 		<video
 			class="background-vid"
 			src="
 			https://github.com/getrefined/function/assets/72031997/467d0e0d-432d-40b2-b8c4-0a18cd495f05
-			
 			"
 			autoplay
 			muted
@@ -31,7 +33,7 @@
 				<div class="wrap">
 					<p>Curious and want to know more?</p>
 					<a class="btn" href="#">STAY CONNECTED</a>
-					<div class="socials">
+					<!-- <div class="socials">
 						<a href="">
 							<svg
 								class="social-icon"
@@ -106,7 +108,7 @@
 								/>
 							</svg>
 						</a>
-					</div>
+					</div> -->
 				</div>
 			</main>
 		</div>
