--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Function.</title>
 		<link rel="stylesheet" href="style.css" />
-		<link rel="icon" type="image/x-icon" href="/favicon.png" />
+		<link rel="icon" type="image/x-icon" href="favicon.png" />
 		<!-- png favicon -->
-		<link rel="apple-touch-icon" href="/favicon.png" />
+		<link rel="apple-touch-icon" href="favicon.png" />
 	</head>
 	<body>
 		<video
