--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			<main>
 				<div class="wrap">
 					<p>Curious and want to know more?</p>
-					<a class="btn" href="#">STAY CONNECTED</a>
+					<a class="btn" href="mailto:lou@function.je">STAY CONNECTED</a>
 					<!-- <div class="socials">
 						<a href="">
 							<svg
