update social links

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
 
 			<main>
 				<div class="wrap">
-					<p>Curious and want to know more?</p>
+					<p>Curious and want to know more ?</p>
 					<a class="btn" href="mailto:lou@function.je">STAY CONNECTED</a>
-					<!-- <div class="socials">
-						<a href="">
+					<div class="socials">
+						<a href="https://www.facebook.com/Function.je">
 							<svg
 								class="social-icon"
 								xmlns="http://www.w3.org/2000/svg"
@@ -56,7 +56,7 @@
 								/>
 							</svg>
 						</a>
-						<a href="">
+						<a href="https://www.instagram.com/function.je/">
 							<svg
 								class="social-icon"
 								xmlns="http://www.w3.org/2000/svg"
@@ -84,7 +84,9 @@
 								/>
 							</svg>
 						</a>
-						<a href="">
+						<a
+							href="https://www.linkedin.com/company/function-event-management-jersey/"
+						>
 							<svg
 								class="social-icon"
 								xmlns="http://www.w3.org/2000/svg"
@@ -108,7 +110,7 @@
 								/>
 							</svg>
 						</a>
-					</div> -->
+					</div>
 				</div>
 			</main>
 		</div>
